# setup_python_project

./: 404.html  CHANGELOG.md  Makefile  README.md  explanation.html  how-to-guides.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  reference.html  tutorials.html
.github/workflows/: lint.yml  orchestrator.yml  pages.yml  release.yml  test.yml
docs/: reference.md
search/: search_index.json
src/example_app/: app.py  service.py
tests/: test_app.py
