[tool.poetry]
name = "example_app"
version = "0.1.0"
description = ""
authors = ["Tuan Pham <phamhoangtuan.it@gmail.com>"]
readme = "README.md"
packages = [{include = "example_app"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.group.lint.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
